Fixed layout shift and added view transitions

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,8 +1,16 @@
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 @layer base {
+  @font-face {
+    font-family: 'Archivo';
+    src: url('/fonts/Archivo-VariableFont_wdth\,wght.ttf') format('truetype');
+    font-display: fallback;
+  }
   :root {
     --radius: 0.5rem
   }
 }
+
